[metadata]
name = ease_lonlat
version = 0.0.3.5
author = Zdenek Ruzicka
author_email = tramtara@seznam.cz
description = To convert between LON, LAT coordinates and EASE(2) grid ROW, COL.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CzendaZdenda/ease_lonlat
project_urls =
    Bug Tracker = https://github.com/CzendaZdenda/ease_lonlat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyproj

[options.packages.find]
where = src

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# Add here test requirements (semicolon/line-separated)
testing = pytest; numpy
